fixed layout issues

--- a/owl/styles.css
+++ b/owl/styles.css
@@ -68,6 +68,24 @@ p {
   padding-right: unset !important;
 }
 
+/* Fixes layout on individual image page */
+
+.notion-root, .max-width {
+  margin-left: unset !important;
+  margin-right: unset !important;
+  max-width: unset !important;
+}
+
+.notion-page__properties {
+  margin-right: auto !important;
+}
+
+#block-gallery-image {
+  display: flex !important;
+  flex-direction: row !important;
+  width: 100% !important;
+}
+
 /* Hides Notion elements */
 .super-navbar,
 .notion-header__title,
